--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
-before_install:
-  - sudo add-apt-repository --yes ppa:hansjorg/rust
-  - sudo add-apt-repository --yes ppa:cmrx64/cargo
-  - sudo apt-get update -qq
-install:
-  - sudo apt-get install -qq rust-nightly cargo
-script:
-  - cargo build
+language: rust
+rust:
+  - stable
+  - beta
+  - nightly
+matrix:
+  allow_failure:
+    - rust: nightly
+sudo: false
